--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "serve": "nodemon ../server/server.js"
+    "serve":"node ../server/server.js"
   },
   "eslintConfig": {
     "extends": [
