--- a/server/package.json
+++ b/server/package.json
@@ -12,8 +12,21 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "path": "^0.12.7"
+    "express-session": "^1.18.0",
+    "fs": "^0.0.1-security",
+    "mongoose": "^8.5.1",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.14",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
+    "path": "^0.12.7",
+    "pdf-watermark": "^1.0.4",
+    "pdfkit": "^0.15.0"
   }
 }
