--- a/client/package.json
+++ b/client/package.json
@@ -1,4 +1,5 @@
 {
+  "proxy":"http://localhost:8000",
   "name": "client",
   "private": true,
   "version": "0.0.0",
@@ -7,8 +8,7 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "serve": "node ../server/server.js"
+    "preview": "vite preview"
   },
   "dependencies": {
     "axios": "^1.7.2",
