--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "proxy":"https://apartment-website-production.up.railway.app",
+  "proxy": "http://localhost:8000",
   "name": "client",
   "private": true,
   "version": "0.0.0",
